@@ -2,6 +2,7 @@
 
 2.7 @ unreleased
   Add support for ircs:// and SSL/TLS connections to IRC servers.
+  Add support for per-URL usernames and passwords.
 
 2.6 @ 2014-02-04
    Fix for an infinite loop on failing to connect to IRC
